force-app/main/default/objects/WIP_Units_Complete__c/WIP_Units_Complete__c.object-meta.xml
<CustomObject>
    <label>Non-Billable Completed</label>
    <nameField>
        <displayFormat>NB-{000000}</displayFormat>
        <label>NB Completed ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Billable Completed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>