force-app/main/default/objects/WIP_Units_Complete__c/fields/Actual_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_Rate__c</fullName>
    <label>Actual Cost Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>