force-app/main/default/objects/WIP_Units_Complete__c/fields/BC_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>BC_Create_Date__c</fullName>
    <formula>BillCode_Name__r.pse__Target_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC Create Date</label>
    <type>Date</type>
</CustomField>