force-app/main/default/objects/WIP_Units_Complete__c/fields/BC_ID__c.field-meta.xml
<CustomField>
    <fullName>BC_ID__c</fullName>
    <formula>BillCode_Name__r.BC_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC ID</label>
    <type>Text</type>
</CustomField>