force-app/main/default/objects/WIP_Units_Complete__c/fields/Bill_Code_Completed_cost__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code_Completed_cost__c</fullName>
    <formula>Actual_Cost_Rate__c  *  WIP_Completed_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Iron Mountain Cost to deliver on the Non-Billable Completed Units multiplied by the Bill Code&apos;s Actual Cost Rate.</inlineHelpText>
    <label>BC Completed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>