force-app/main/default/objects/WIP_Units_Complete__c/fields/Bill_Code_WIP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code_WIP_Amount__c</fullName>
    <formula>SOW_Rate__c *  WIP_Completed_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the computed amount of the entered Non-Billable Completed Units multiplied by the Bill Code&apos;s SOW Rate.</inlineHelpText>
    <label>BC WIP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>