force-app/main/default/objects/WIP_Units_Complete__c/fields/BillCode__c.field-meta.xml
<CustomField>
    <fullName>BillCode__c</fullName>
    <formula>BillCode_Name__r.Billing_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the same value from a corresponding Bill Code Record</inlineHelpText>
    <label>BillCode</label>
    <type>Text</type>
</CustomField>