force-app/main/default/objects/WIP_Units_Complete__c/fields/BillCode_Name__c.field-meta.xml
<CustomField>
    <fullName>BillCode_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the same value from a corresponding Bill Code Record</inlineHelpText>
    <label>BillCode Name</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Non-Billable Completed (BillCode Name)</relationshipLabel>
    <relationshipName>Non_Billable_Completed</relationshipName>
    <type>Lookup</type>
</CustomField>