force-app/main/default/objects/WIP_Units_Complete__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <inlineHelpText>The last date of units complete or default to date entered.</inlineHelpText>
    <label>Date Completed</label>
    <type>DateTime</type>
</CustomField>