force-app/main/default/objects/WIP_Units_Complete__c/fields/Parent_BC__c.field-meta.xml
<CustomField>
    <fullName>Parent_BC__c</fullName>
    <formula>BillCode_Name__r.Parent_Bill_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent BC</label>
    <type>Text</type>
</CustomField>