force-app/main/default/objects/WIP_Units_Complete__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Non-Billable Completed</relationshipLabel>
    <relationshipName>WIP_Units_Completes</relationshipName>
    <type>Lookup</type>
</CustomField>