force-app/main/default/objects/WIP_Units_Complete__c/fields/SOW_Rate__c.field-meta.xml
<CustomField>
    <fullName>SOW_Rate__c</fullName>
    <description>Bill Code SOW Rate</description>
    <formula>BillCode_Name__r.Bill_Code_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>