force-app/main/default/objects/WIP_Units_Complete__c/fields/WIP_Completed_Units__c.field-meta.xml
<CustomField>
    <fullName>WIP_Completed_Units__c</fullName>
    <inlineHelpText>The number of units completed since the last update.</inlineHelpText>
    <label>NB Completed Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>