force-app/main/default/objects/WIP_Units_Complete__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Bill_Code__c</columns>
    <columns>WIP_Completed_Units__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Parent_BC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>